syntax = "proto3";

package api.task;

option go_package = "github.com/alsritter/middlebaby/api/task;task";
option java_multiple_files = true;
option java_package = "api.task";

import "google/api/annotations.proto";

// NOTE: https://formatter.org/protobuf-formatter

service Task {
  rpc GetAllHttpTaskCases(CommonRequest) returns (GetAllHttpTaskCasesReply) {
    option (google.api.http) = {
      post: "/task/get-all-http-cases"
      body: "*"
    };
  };
  rpc RunHttpTask(RunHttpTaskRequest) returns (RunHttpTaskReply) {
    option (google.api.http) = {
      post: "/task/run-http-task"
      body: "*"
    };
  };
}

message CommonRequest {}
message GetAllHttpTaskCasesReply {
  repeated HttpTaskCase httpTaskCases = 1;
}

message RunHttpTaskRequest {}
message RunHttpTaskReply {}

// ----------------------------------------------------------------
message HttpTaskCase {
  string id = 1;
  HttpRequest Request = 2;
  HttpResponse Response = 3;
}

// HttpRequest represent the structure of real request
message HttpRequest {
  string method = 1;
  string url = 2;
  map<string, string> headers = 3;
  map<string, string> params = 4;
}

// HttpResponse represent the structure of real response
message HttpResponse {
  int32 status = 1;
  map<string, string> headers = 2;
  string body = 3;
  ResponseDelay delay = 4;
}

// ResponseDelay represent time delay before server responds.
message ResponseDelay {
  int64 delay = 1;
  int64 offset = 2;
}

message GrpcTaskCase {}
